# DPDK_doc

./: commands.md  in_IOMMU.md  settings.md  start_dpdk-testpmd.md  synopsis.md  запуск.md
dpdkCpp/: CMakeLists.txt
dpdkCpp/src/: CMakeLists.txt  main.cpp
